[package]
name = "test-bls-canister-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17.1"
ic-cdk-timers = "0.11"
ic_bls12_381 = { version = "0.10.0", features = ["experimental"] }
